Fix tab control and spacing between cards

--- a/myuw/static/css/mobile.less
+++ b/myuw/static/css/mobile.less
@@ -2075,7 +2075,7 @@ label { font-weight: normal; margin-bottom: auto; }
 			}
 			.acal-page-events {
 				h3 {color: #333;margin-top: 0;margin-bottom: 0;font-family: 'Roboto', sans-serif;font-weight: 400; font-size: 20px; padding:20px 0;}
-				.acal-page-term-break {padding: 20px 0;text-align:center;}
+				.acal-page-term-break {padding: 0 0 20px 0;text-align:center;}
 				.acal-page-event-list { list-style-type: none;padding-left: 0;
 					.acal-page-event-list-item { margin-bottom:10px;
 						.acal-page-event-date {}
